fixed spacing issue on committee member list in students/edit

--- a/app/assets/stylesheets/students.css.less
+++ b/app/assets/stylesheets/students.css.less
@@ -57,6 +57,14 @@ tr.visible:nth-child(odd){
   }
 }
 
+.sidebar-nav ul > li {
+  margin-bottom: 10px;
+}
+
+tbody#committee tr.fields > td div.control-group {
+  margin-bottom: 0px;
+}
+
 /*.table-select > div {
   margin-left: 10px !important;
 }*/
